--- a/tornado_prediction_ML.ipynb
+++ b/tornado_prediction_ML.ipynb
@@ -2969,129 +2969,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Output CSV file for weights for app"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fat</th>\n",
-       "      <th>len</th>\n",
-       "      <th>wid</th>\n",
-       "      <th>slat</th>\n",
-       "      <th>slon</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>20</td>\n",
-       "      <td>31.52</td>\n",
-       "      <td>-92.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>30</td>\n",
-       "      <td>30.23</td>\n",
-       "      <td>-92.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>20</td>\n",
-       "      <td>29.97</td>\n",
-       "      <td>-92.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>100</td>\n",
-       "      <td>34.13</td>\n",
-       "      <td>-81.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>100</td>\n",
-       "      <td>34.40</td>\n",
-       "      <td>-81.07</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   fat   len  wid   slat   slon\n",
-       "0    0  15.0   20  31.52 -92.23\n",
-       "1    0   5.0   30  30.23 -92.18\n",
-       "2    0   0.2   20  29.97 -92.17\n",
-       "3    0   3.0  100  34.13 -81.23\n",
-       "4    0   0.2  100  34.40 -81.07"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# keep columns used as predictors of cleaned dataframe\n",
-    "\n",
-    "cleaned_output = cleaned[[\"fat\", \"len\", \"wid\", \"slat\", \"slon\"]]\n",
-    "cleaned_output.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# output to csv\n",
-    "\n",
-    "cleaned_output.to_csv(r'cleaned.csv',index=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Predict Tornado Category (magnitude)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3233,7 +3116,7 @@
        "[31340 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3246,7 +3129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3266,7 +3149,7 @@
        "Name: mag, Length: 31340, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3293,7 +3176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3306,12 +3189,129 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Apply Scaler"
+    "### Output CSV file for weights for app"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fat</th>\n",
+       "      <th>len</th>\n",
+       "      <th>wid</th>\n",
+       "      <th>slat</th>\n",
+       "      <th>slon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5173</th>\n",
+       "      <td>0</td>\n",
+       "      <td>22.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31.970</td>\n",
+       "      <td>-91.6000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27587</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>900</td>\n",
+       "      <td>31.804</td>\n",
+       "      <td>-83.6168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6151</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>30</td>\n",
+       "      <td>41.080</td>\n",
+       "      <td>-82.4000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25423</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30.070</td>\n",
+       "      <td>-91.2800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9190</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>50</td>\n",
+       "      <td>48.400</td>\n",
+       "      <td>-107.2000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       fat    len  wid    slat      slon\n",
+       "5173     0  22.00    0  31.970  -91.6000\n",
+       "27587    0   0.29  900  31.804  -83.6168\n",
+       "6151     0   0.00   30  41.080  -82.4000\n",
+       "25423    0   0.20   30  30.070  -91.2800\n",
+       "9190     0   0.10   50  48.400 -107.2000"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# keep columns used as predictors of cleaned dataframe\n",
+    "\n",
+    "train_output = X_train[[\"fat\", \"len\", \"wid\", \"slat\", \"slon\"]]\n",
+    "train_output.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# output to csv\n",
+    "\n",
+    "train_output.to_csv(r'cleaned.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply Scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3330,7 +3330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3368,7 +3368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3376,7 +3376,7 @@
      "output_type": "stream",
      "text": [
       "Accuracy of Decision Tree on training 0.999617102744097\n",
-      "Accuracy of Decision Tree on testing 0.636375239310785\n"
+      "Accuracy of Decision Tree on testing 0.6353541799617103\n"
      ]
     }
    ],
@@ -3392,7 +3392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3414,7 +3414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3437,7 +3437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3460,7 +3460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3483,7 +3483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3513,7 +3513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3522,7 +3522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3531,7 +3531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3548,7 +3548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3561,7 +3561,7 @@
        "  0.425671130679386]]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3580,7 +3580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3589,7 +3589,7 @@
        "array([3])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
